crates/test-files/fixtures/compile_errors/contract_function_with_generic_params.fe
trait Dummy {}

contract Foo {
    pub fn bar<T: Dummy>(val: T) {}
}
